--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "angular2-full-stack",
+  "name": "inventor-showcase",
   "version": "4.0.0",
   "license": "MIT",
-  "author": "Davide Violante",
-  "description": "Angular Full Stack project built using Angular 4, Express, Mongoose and Node.",
+  "author": "Wes Rodgers",
+  "description": "Inventor Showcase",
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
@@ -31,6 +31,7 @@
     "body-parser": "^1.17.1",
     "bootstrap": "4.0.0-alpha.5",
     "core-js": "^2.4.1",
+    "cors": "^2.8.3",
     "express": "^4.15.2",
     "express-jwt": "^5.1.0",
     "font-awesome": "^4.7.0",
